--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Este es un sitio web con GitHub Pages</h1>
-    <p>Y fue creado para el Curso de Git y Github de Platzi</p>
+    <p>Y fue creado para el Curso de Git y Github de Platzi.</p>
 </body>
 </html>
